--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 <body
     class="overflow-hidden dark:bg-gray-950">
                 
-                                <video id="player" src="playlist.m3u8" class="video-js w-full h-full vjs-default-skin">
-                                                    <track kind="captions" label="Français forcé" srclang="VFF" src="1722597751_04_track4_[fre].vtt" id="264" />
-                                                    <track kind="captions" label="Français" srclang="VF" src="1722597751_04_track5_[fre].vtt" id="265" />
+                                <video id="player" src="https://share22147.sharecloudy.com/files/aa/Pb0FVHAkalNpdELWR3bIbSb1fDlXuwUkHUZ.m3u8" class="video-js w-full h-full vjs-default-skin">
+                                                    <track kind="captions" label="Français forcé" srclang="VFF" src="https://popstream.to/uploads/subtitle/07-2024/1722598318_08_track3_[fre].vtt" id="264" />
+                                                    <track kind="captions" label="Français" srclang="VF" src="https://popstream.to/uploads/subtitle/07-2024/1722598318_08_track5_[fre].vtt" id="265" />
                                             </video>
             
                                             <link rel="stylesheet" href="player.css" />
